# xapp-symbolic-icons

./: meson.build
icons/: meson.build  xsi-adwaita-symbolic.info
